[gd_scene load_steps=7 format=3 uid="uid://bycoaweeg1ld8"]

[ext_resource type="Texture2D" uid="uid://dg6wygwhju14t" path="res://images/Player/Icecle_custom.png" id="1_367lw"]
[ext_resource type="Script" path="res://Script/Ball/ball.gd" id="1_cknhp"]
[ext_resource type="Texture2D" uid="uid://bas3mgov53x3y" path="res://images/Player/Rock1.png" id="1_r1vib"]
[ext_resource type="Script" path="res://Script/Ball/StateMachine/SphereState.gd" id="4_40w1o"]
[ext_resource type="Script" path="res://Script/Ball/StateMachine/IcicleState.gd" id="5_uhefy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rk8p7"]
radius = 4.12311

[node name="Ball" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 0
script = ExtResource("1_cknhp")
speed = 10
orbitSpeedMult = 0.2

[node name="BallSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_r1vib")

[node name="BallCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rk8p7")

[node name="FlyTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="BallCollision2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_rk8p7")

[node name="StateMachine" type="Node" parent="."]

[node name="SphereState" type="Node" parent="StateMachine"]
script = ExtResource("4_40w1o")

[node name="SphereForm" type="Sprite2D" parent="StateMachine/SphereState"]
light_mask = 0
visibility_layer = 0
scale = Vector2(3, 3)
texture = ExtResource("1_r1vib")

[node name="IcicleState" type="Node" parent="StateMachine"]
script = ExtResource("5_uhefy")

[node name="IcicleForm" type="Sprite2D" parent="StateMachine/IcicleState"]
light_mask = 0
visibility_layer = 0
scale = Vector2(3, 3)
texture = ExtResource("1_367lw")

[connection signal="timeout" from="FlyTimer" to="." method="_on_fly_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_area_2d_area_entered"]
